syntax = "proto3";

package gorm;

import "dal/v1/annotations.proto";
import "api/weewar.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/panyam/protoc-gen-dal/tests/gen/dal;testdal";


message IndexInfoGORM {
  option (dal.v1.gorm) = { source: "api.IndexInfo" };
}

message TileGORM {
  option (dal.v1.gorm) = { source: "api.Tile" };
}

message UnitGORM {
  option (dal.v1.gorm) = { source: "api.Unit" };
}

message AttackRecordGORM {
  option (dal.v1.gorm) = { source: "api.AttackRecord" };
}

message WorldGORM {
  option (dal.v1.gorm) = { source: "api.World", table: "worlds" };
}

message WorldDataGORM {
  option (dal.v1.gorm) = { source: "api.WorldData", table: "world_data" };
}

///////// Game related models


// Describes a game and its metadata
message GameGORM {
  option (dal.v1.gorm) = { source: "api.Game", table: "games" };
}

message GameConfigurationGORM {
  option (dal.v1.gorm) = { source: "api.GameConfiguration" };
}

message IncomeConfigGORM {
  option (dal.v1.gorm) = { source: "api.IncomeConfig" };
}

message GamePlayerGORM {
  option (dal.v1.gorm) = { source: "api.GamePlayer" };
}

message GameTeamGORM {
  option (dal.v1.gorm) = { source: "api.GameTeam" };
}

message GameSettingsGORM {
  option (dal.v1.gorm) = { source: "api.GameSettings" };
}

// Holds the game's Active/Current state (eg world state)
message GameStateGORM {
  option (dal.v1.gorm) = { source: "api.GameState" };
}

// Holds the game's move history (can be used as a replay log)
message GameMoveHistoryGORM {
  option (dal.v1.gorm) = { source: "api.GameMoveHistory" };
}

// A move group - we can allow X moves in one "tick"
message GameMoveGroupGORM {
  option (dal.v1.gorm) = { source: "api.GameMoveGroup" };
}
// A move group - we can allow X moves in one "tick"
message MoveUnitActionGORM {
  option (dal.v1.gorm) = { source: "api.MoveUnitAction" };

  google.protobuf.Any reconstructed_path = 1;
}

/**
 * Represents a single move which can be one of many actions in the game
 */
message GameMoveGORM {
  option (dal.v1.gorm) = { source: "api.GameMove" };

  // Field named "move_type" matches the oneof name in source
  // This automatically skips all oneof members (move_unit, attack_unit, end_turn, build_unit)
  google.protobuf.Any move_type = 1;

  google.protobuf.Any changes = 2;
}
